legacy/deploy/k8s/base/tools-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: geneweaver-legacy-tools
  labels:
    app: geneweaver-legacy-tools
spec:
  replicas: 1
  selector:
    matchLabels:
      app: geneweaver-legacy-tools
  template:
    metadata:
      labels:
        app: geneweaver-legacy-tools
      annotations:
        gke-gcsfuse/volumes: "true"
    spec:
      serviceAccountName: workload-identity-geneweaver
      volumes:
        - name: geneweaver-legacy-tools
          persistentVolumeClaim:
            claimName: geneweaver-pvc
      containers:
        - name: geneweaver-legacy-tools
          image: geneweaver-legacy-tools
          imagePullPolicy: Always
          volumeMounts:
            - name: geneweaver-legacy-tools
              mountPath: /var/geneweaver/results
