legacy/deploy/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: geneweaver-legacy
  labels:
    app: geneweaver-legacy
spec:
  type: ClusterIP
  selector:
    app: geneweaver-legacy
  ports:
    - protocol: TCP
      name: direct
      port: 8000
      targetPort: 8000
