legacy/deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name:  geneweaver-legacy-ingress
  annotations:
    # Set the read and send timeouts for long connections
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"  # 1 hour, adjust as needed
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"  # 1 hour, adjust as needed
    # Optional: Prevent connection closing during idle time
    nginx.ingress.kubernetes.io/proxy-buffering: "off"      # Ensure SSE is not buffered
    nginx.ingress.kubernetes.io/keep-alive: "75s"           # Adjust keep-alive duration
